--- a/src/Components/PostsComponent.css
+++ b/src/Components/PostsComponent.css
@@ -1,26 +1,35 @@
-
 .main {
-    display: flex;
-    flex-wrap: wrap;
-    font-family: calibri, serif;
+  display: flex;
+  flex-wrap: wrap;
+  font-family: calibri, serif;
 }
 
 .card {
-    width: 500px;
-    height: auto;
-    padding: 20px;
-    margin: 50px;
-    background-color: #6cac53;
+  width: 500px;
+  height: auto;
+  padding: 20px;
+  margin: 50px;
+  background-color: #6cac53;
 }
 
 .card__title {
-    font-size: 1.5rem;
-    margin-bottom: 15px;
+  font-size: 1.5rem;
+  margin-bottom: 15px;
 }
 
 .card__body {
-    font-size: 1.1rem;
-    margin-bottom: 15px;
+  font-size: 1.1rem;
+  margin-bottom: 15px;
 }
 
-
+.onli_liked {
+  font-size: 1.1rem;
+  padding: 5px 15px;
+  border: none;
+  border-radius: 20px;
+  background-color: #0f0;
+  margin-left: 50%;
+  margin-top: 50px;
+  cursor: pointer;
+  transform: translateX(-50%);
+}
